--- a/aufgaben/my-app/.env
+++ b/aufgaben/my-app/.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://nataliinsajt:901xjNYGcVhk1gCF@cluster0.vipfzn9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=
 PORT=3001
